improve solution for the "Min Stack": ArrayList -> LinkedList