@@ -1,7 +1,6 @@
 package com.leetcode.oj;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.LinkedList;
 
 /**
  * Min Stack
@@ -18,8 +17,8 @@ import java.util.List;
  */
 public class MinStack {
 
-	private List<Integer> stack = new ArrayList<Integer>();
-	private List<Integer> min = new ArrayList<Integer>();
+	private LinkedList<Integer> stack = new LinkedList<Integer>();
+	private LinkedList<Integer> min = new LinkedList<Integer>();
 
 	/**
 	 * Push element x onto stack
@@ -28,8 +27,8 @@ public class MinStack {
 	 */
 	public void push(int x) {
 		stack.add(x);
-		if (min.isEmpty() || min.get(min.size() - 1) >= x) {
-			min.add(x);
+		if (min.isEmpty() || min.getLast() >= x) {
+			min.addLast(x);
 		}
 	}
 
@@ -38,9 +37,9 @@ public class MinStack {
 	 */
 	public void pop() {
 		if (getMin() == top()) {
-			min.remove(min.size() - 1);
+			min.removeLast();
 		}
-		stack.remove(stack.size() - 1);
+		stack.removeLast();
 	}
 
 	/**
@@ -49,7 +48,7 @@ public class MinStack {
 	 * @return int element
 	 */
 	public int top() {
-		return stack.get(stack.size() - 1);
+		return stack.getLast();
 	}
 
 	/**
@@ -58,7 +57,7 @@ public class MinStack {
 	 * @return int element
 	 */
 	public int getMin() {
-		return min.get(min.size() - 1);
+		return min.getLast();
 	}
 
 }
